// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toAst buffer 1`] = `
Root {
  "nodes": Array [
    StringBuffer {
      "buffer": "abcd
abcddef
abcdef
abcdef
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 5,
        },
        "raw": "abcd
abcddef
abcdef
abcdef
",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 5,
    },
    "raw": "abcd
abcddef
abcdef
abcdef
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst dust-comment 1`] = `
Root {
  "nodes": Array [
    DustComment {
      "source": Object {
        "end": Object {
          "column": 13,
          "line": 1,
        },
        "raw": "{! ab! bcc !}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "text": " ab! bcc ",
      "type": "DUST_COMMENT",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 14,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{! ab! bcc !}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst dust-params 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [],
      "context": null,
      "isSelfClosing": true,
      "key": Path {
        "path": "section",
        "source": Object {
          "end": Object {
            "column": 9,
            "line": 1,
          },
          "raw": "section",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [
        Param {
          "key": "param0",
          "source": Object {
            "end": Object {
              "column": 19,
              "line": 1,
            },
            "raw": "param0=\\"\\"",
            "start": Object {
              "column": 11,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": QuotedDustValue {
            "source": Object {
              "end": Object {
                "column": 19,
                "line": 1,
              },
              "raw": "\\"\\"",
              "start": Object {
                "column": 18,
                "line": 1,
              },
            },
            "type": "QUOTED_DUST_VALUE",
            "valueArray": Array [],
          },
        },
        Param {
          "key": "param1",
          "source": Object {
            "end": Object {
              "column": 32,
              "line": 1,
            },
            "raw": "param1=\\"abc\\"",
            "start": Object {
              "column": 21,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": QuotedDustValue {
            "source": Object {
              "end": Object {
                "column": 32,
                "line": 1,
              },
              "raw": "\\"abc\\"",
              "start": Object {
                "column": 28,
                "line": 1,
              },
            },
            "type": "QUOTED_DUST_VALUE",
            "valueArray": Array [
              StringBuffer {
                "buffer": "abc",
                "source": Object {
                  "end": Object {
                    "column": 31,
                    "line": 1,
                  },
                  "raw": "abc",
                  "start": Object {
                    "column": 29,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
          },
        },
        Param {
          "key": "param2",
          "source": Object {
            "end": Object {
              "column": 41,
              "line": 1,
            },
            "raw": "param2=1",
            "start": Object {
              "column": 34,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": NumberNode {
            "num": 1,
            "source": Object {
              "end": Object {
                "column": 41,
                "line": 1,
              },
              "raw": "1",
              "start": Object {
                "column": 41,
                "line": 1,
              },
            },
            "type": "NUMBER",
          },
        },
        Param {
          "key": "param3",
          "source": Object {
            "end": Object {
              "column": 56,
              "line": 1,
            },
            "raw": "param3=someKey",
            "start": Object {
              "column": 43,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": Path {
            "path": "someKey",
            "source": Object {
              "end": Object {
                "column": 56,
                "line": 1,
              },
              "raw": "someKey",
              "start": Object {
                "column": 50,
                "line": 1,
              },
            },
            "type": "PATH",
          },
        },
        Param {
          "key": "param4",
          "source": Object {
            "end": Object {
              "column": 78,
              "line": 1,
            },
            "raw": "param4=somePath[0][0]",
            "start": Object {
              "column": 58,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": Path {
            "path": "somePath[0][0]",
            "source": Object {
              "end": Object {
                "column": 78,
                "line": 1,
              },
              "raw": "somePath[0][0]",
              "start": Object {
                "column": 65,
                "line": 1,
              },
            },
            "type": "PATH",
          },
        },
      ],
      "source": Object {
        "end": Object {
          "column": 81,
          "line": 1,
        },
        "raw": "{#section param0=\\"\\" param1=\\"abc\\" param2=1 param3=someKey param4=somePath[0][0] /}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SECTION",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 82,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{#section param0=\\"\\" param1=\\"abc\\" param2=1 param3=someKey param4=somePath[0][0] /}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst dust-raw 1`] = `
Root {
  "nodes": Array [
    Raw {
      "source": Object {
        "end": Object {
          "column": 23,
          "line": 1,
        },
        "raw": "{\` some raw text \`bc \`}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "text": " some raw text \`bc ",
      "type": "RAW",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 24,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{\` some raw text \`bc \`}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst empty 1`] = `
Root {
  "nodes": Array [],
  "source": Object {
    "end": Object {
      "column": undefined,
      "line": undefined,
    },
    "raw": "",
    "start": Object {
      "column": undefined,
      "line": undefined,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst escaped-quote 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [],
      "context": null,
      "isSelfClosing": true,
      "key": Path {
        "path": "section",
        "source": Object {
          "end": Object {
            "column": 9,
            "line": 1,
          },
          "raw": "section",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [
        Param {
          "key": "param",
          "source": Object {
            "end": Object {
              "column": 21,
              "line": 1,
            },
            "raw": "param=\\"\\\\\\\\\\"\\"",
            "start": Object {
              "column": 11,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": QuotedDustValue {
            "source": Object {
              "end": Object {
                "column": 21,
                "line": 1,
              },
              "raw": "\\"\\\\\\\\\\"\\"",
              "start": Object {
                "column": 17,
                "line": 1,
              },
            },
            "type": "QUOTED_DUST_VALUE",
            "valueArray": Array [
              EscapedQuote {
                "escapedQuote": "\\\\\\\\\\"",
                "source": Object {
                  "end": Object {
                    "column": 20,
                    "line": 1,
                  },
                  "raw": "\\\\\\\\\\"",
                  "start": Object {
                    "column": 18,
                    "line": 1,
                  },
                },
                "type": "ESCAPED_QUOTE",
              },
            ],
          },
        },
      ],
      "source": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "raw": "{#section param=\\"\\\\\\\\\\"\\" /}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SECTION",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 25,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{#section param=\\"\\\\\\\\\\"\\" /}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst exists 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [
        Body {
          "context": null,
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  abc
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 3,
                  },
                  "raw": "
  abc
",
                  "start": Object {
                    "column": 12,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "raw": "
  abc
",
              "start": Object {
                "column": 12,
                "line": 1,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 3,
            },
            "raw": "
  abc
",
            "start": Object {
              "column": 12,
              "line": 1,
            },
          },
          "type": "BODY",
        },
      ],
      "context": null,
      "isSelfClosing": false,
      "key": Path {
        "path": "some_key",
        "source": Object {
          "end": Object {
            "column": 10,
            "line": 1,
          },
          "raw": "some_key",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 11,
          "line": 3,
        },
        "raw": "{?some_key}
  abc
{/some_key}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "EXISTS",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 4,
        },
        "raw": "
",
        "start": Object {
          "column": 12,
          "line": 3,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 4,
    },
    "raw": "{?some_key}
  abc
{/some_key}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst helper 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [
        Body {
          "context": null,
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  abc
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 3,
                  },
                  "raw": "
  abc
",
                  "start": Object {
                    "column": 10,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "raw": "
  abc
",
              "start": Object {
                "column": 10,
                "line": 1,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 3,
            },
            "raw": "
  abc
",
            "start": Object {
              "column": 10,
              "line": 1,
            },
          },
          "type": "BODY",
        },
      ],
      "context": null,
      "isSelfClosing": false,
      "key": Path {
        "path": "helper",
        "source": Object {
          "end": Object {
            "column": 8,
            "line": 1,
          },
          "raw": "helper",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 9,
          "line": 3,
        },
        "raw": "{@helper}
  abc
{/helper}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "HELPER",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 4,
        },
        "raw": "
",
        "start": Object {
          "column": 10,
          "line": 3,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 4,
    },
    "raw": "{@helper}
  abc
{/helper}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst html-tag 1`] = `
Root {
  "nodes": Array [
    HtmlTag {
      "attributes": Array [],
      "body": Root {
        "nodes": Array [],
        "source": Object {
          "end": Object {
            "column": undefined,
            "line": undefined,
          },
          "raw": "",
          "start": Object {
            "column": undefined,
            "line": undefined,
          },
        },
        "type": "ROOT",
      },
      "isSelfClosing": false,
      "source": Object {
        "end": Object {
          "column": 11,
          "line": 1,
        },
        "raw": "<div></div>",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "tagName": "div",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 12,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "<div></div>
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst html-with-attributes 1`] = `
Root {
  "nodes": Array [
    HtmlTag {
      "attributes": Array [
        Attribute {
          "attributeName": "data-test-abc",
          "attributeValue": true,
          "isBooleanAttribute": true,
          "source": Object {
            "end": Object {
              "column": 18,
              "line": 1,
            },
            "raw": "data-test-abc",
            "start": Object {
              "column": 6,
              "line": 1,
            },
          },
          "type": "ATTRIBUTE",
        },
        Attribute {
          "attributeName": "class",
          "attributeValue": "\\"abc\\"",
          "isBooleanAttribute": false,
          "source": Object {
            "end": Object {
              "column": 30,
              "line": 1,
            },
            "raw": "class=\\"abc\\"",
            "start": Object {
              "column": 20,
              "line": 1,
            },
          },
          "type": "ATTRIBUTE",
        },
        Attribute {
          "attributeName": "align",
          "attributeValue": "\\"left\\"",
          "isBooleanAttribute": false,
          "source": Object {
            "end": Object {
              "column": 43,
              "line": 1,
            },
            "raw": "align=\\"left\\"",
            "start": Object {
              "column": 32,
              "line": 1,
            },
          },
          "type": "ATTRIBUTE",
        },
      ],
      "body": Root {
        "nodes": Array [],
        "source": Object {
          "end": Object {
            "column": undefined,
            "line": undefined,
          },
          "raw": "",
          "start": Object {
            "column": undefined,
            "line": undefined,
          },
        },
        "type": "ROOT",
      },
      "isSelfClosing": false,
      "source": Object {
        "end": Object {
          "column": 50,
          "line": 1,
        },
        "raw": "<div data-test-abc class=\\"abc\\" align=\\"left\\"></div>",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "tagName": "div",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 51,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
    HtmlTag {
      "attributes": Array [
        Attribute {
          "attributeName": "disabled",
          "attributeValue": true,
          "isBooleanAttribute": true,
          "source": Object {
            "end": Object {
              "column": 15,
              "line": 2,
            },
            "raw": "disabled",
            "start": Object {
              "column": 8,
              "line": 2,
            },
          },
          "type": "ATTRIBUTE",
        },
      ],
      "body": null,
      "isSelfClosing": true,
      "source": Object {
        "end": Object {
          "column": 16,
          "line": 2,
        },
        "raw": "<input disabled>",
        "start": Object {
          "column": 1,
          "line": 2,
        },
      },
      "tagName": "input",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 3,
        },
        "raw": "
",
        "start": Object {
          "column": 17,
          "line": 2,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 3,
    },
    "raw": "<div data-test-abc class=\\"abc\\" align=\\"left\\"></div>
<input disabled>
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst html-with-body 1`] = `
Root {
  "nodes": Array [
    HtmlTag {
      "attributes": Array [],
      "body": Root {
        "nodes": Array [
          StringBuffer {
            "buffer": "abcd",
            "source": Object {
              "end": Object {
                "column": 9,
                "line": 1,
              },
              "raw": "abcd",
              "start": Object {
                "column": 6,
                "line": 1,
              },
            },
            "type": "STRING_BUFFER",
          },
        ],
        "source": Object {
          "end": Object {
            "column": 9,
            "line": 1,
          },
          "raw": "abcd",
          "start": Object {
            "column": 6,
            "line": 1,
          },
        },
        "type": "ROOT",
      },
      "isSelfClosing": false,
      "source": Object {
        "end": Object {
          "column": 15,
          "line": 1,
        },
        "raw": "<div>abcd</div>",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "tagName": "div",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "<div>abcd</div>
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst inline-partial 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [],
      "context": null,
      "isSelfClosing": true,
      "key": Path {
        "path": "\\"some literal {~lb} {abc}\\"",
        "source": Object {
          "end": Object {
            "column": 28,
            "line": 1,
          },
          "raw": "\\"some literal {~lb} {abc}\\"",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [
        Param {
          "key": "param1",
          "source": Object {
            "end": Object {
              "column": 41,
              "line": 1,
            },
            "raw": "param1=\\"abc\\"",
            "start": Object {
              "column": 30,
              "line": 1,
            },
          },
          "type": "PARAM",
          "value": QuotedDustValue {
            "source": Object {
              "end": Object {
                "column": 41,
                "line": 1,
              },
              "raw": "\\"abc\\"",
              "start": Object {
                "column": 37,
                "line": 1,
              },
            },
            "type": "QUOTED_DUST_VALUE",
            "valueArray": Array [
              StringBuffer {
                "buffer": "abc",
                "source": Object {
                  "end": Object {
                    "column": 40,
                    "line": 1,
                  },
                  "raw": "abc",
                  "start": Object {
                    "column": 38,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
          },
        },
      ],
      "source": Object {
        "end": Object {
          "column": 44,
          "line": 1,
        },
        "raw": "{>\\"some literal {~lb} {abc}\\" param1=\\"abc\\" /}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "PARTIAL",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 45,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{>\\"some literal {~lb} {abc}\\" param1=\\"abc\\" /}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst mixed-dust-and-html 1`] = `
Root {
  "nodes": Array [
    HtmlTag {
      "attributes": Array [
        Attribute {
          "attributeName": "class",
          "attributeValue": "\\"abc\\"",
          "isBooleanAttribute": false,
          "source": Object {
            "end": Object {
              "column": 16,
              "line": 1,
            },
            "raw": "class=\\"abc\\"",
            "start": Object {
              "column": 6,
              "line": 1,
            },
          },
          "type": "ATTRIBUTE",
        },
      ],
      "body": Root {
        "nodes": Array [
          StringBuffer {
            "buffer": "
    ",
            "source": Object {
              "end": Object {
                "column": 4,
                "line": 2,
              },
              "raw": "
    ",
              "start": Object {
                "column": 18,
                "line": 1,
              },
            },
            "type": "STRING_BUFFER",
          },
          Section {
            "bodies": Array [
              Body {
                "context": null,
                "root": Root {
                  "nodes": Array [
                    StringBuffer {
                      "buffer": "
      abc
      ",
                      "source": Object {
                        "end": Object {
                          "column": 6,
                          "line": 4,
                        },
                        "raw": "
      abc
      ",
                        "start": Object {
                          "column": 25,
                          "line": 2,
                        },
                      },
                      "type": "STRING_BUFFER",
                    },
                    HtmlTag {
                      "attributes": Array [],
                      "body": Root {
                        "nodes": Array [
                          StringBuffer {
                            "buffer": "abc",
                            "source": Object {
                              "end": Object {
                                "column": 15,
                                "line": 4,
                              },
                              "raw": "abc",
                              "start": Object {
                                "column": 13,
                                "line": 4,
                              },
                            },
                            "type": "STRING_BUFFER",
                          },
                        ],
                        "source": Object {
                          "end": Object {
                            "column": 15,
                            "line": 4,
                          },
                          "raw": "abc",
                          "start": Object {
                            "column": 13,
                            "line": 4,
                          },
                        },
                        "type": "ROOT",
                      },
                      "isSelfClosing": false,
                      "source": Object {
                        "end": Object {
                          "column": 22,
                          "line": 4,
                        },
                        "raw": "<span>abc</span>",
                        "start": Object {
                          "column": 7,
                          "line": 4,
                        },
                      },
                      "tagName": "span",
                      "type": "HTML_TAG",
                    },
                    StringBuffer {
                      "buffer": "
      ",
                      "source": Object {
                        "end": Object {
                          "column": 6,
                          "line": 5,
                        },
                        "raw": "
      ",
                        "start": Object {
                          "column": 23,
                          "line": 4,
                        },
                      },
                      "type": "STRING_BUFFER",
                    },
                    Reference {
                      "filters": Array [
                        Filter {
                          "filter": "a",
                          "source": Object {
                            "end": Object {
                              "column": 18,
                              "line": 5,
                            },
                            "raw": "|a",
                            "start": Object {
                              "column": 17,
                              "line": 5,
                            },
                          },
                          "type": "FILTER",
                        },
                        Filter {
                          "filter": "b",
                          "source": Object {
                            "end": Object {
                              "column": 20,
                              "line": 5,
                            },
                            "raw": "|b",
                            "start": Object {
                              "column": 19,
                              "line": 5,
                            },
                          },
                          "type": "FILTER",
                        },
                      ],
                      "path": Path {
                        "path": "reference",
                        "source": Object {
                          "end": Object {
                            "column": 16,
                            "line": 5,
                          },
                          "raw": "reference",
                          "start": Object {
                            "column": 8,
                            "line": 5,
                          },
                        },
                        "type": "PATH",
                      },
                      "source": Object {
                        "end": Object {
                          "column": 21,
                          "line": 5,
                        },
                        "raw": "{reference|a|b}",
                        "start": Object {
                          "column": 7,
                          "line": 5,
                        },
                      },
                      "type": "REFERENCE",
                    },
                    StringBuffer {
                      "buffer": "
    ",
                      "source": Object {
                        "end": Object {
                          "column": 4,
                          "line": 6,
                        },
                        "raw": "
    ",
                        "start": Object {
                          "column": 22,
                          "line": 5,
                        },
                      },
                      "type": "STRING_BUFFER",
                    },
                  ],
                  "source": Object {
                    "end": Object {
                      "column": 4,
                      "line": 6,
                    },
                    "raw": "
      abc
      <span>abc</span>
      {reference|a|b}
    ",
                    "start": Object {
                      "column": 25,
                      "line": 2,
                    },
                  },
                  "type": "ROOT",
                },
                "source": Object {
                  "end": Object {
                    "column": 4,
                    "line": 6,
                  },
                  "raw": "
      abc
      <span>abc</span>
      {reference|a|b}
    ",
                  "start": Object {
                    "column": 25,
                    "line": 2,
                  },
                },
                "type": "BODY",
              },
            ],
            "context": null,
            "isSelfClosing": false,
            "key": Path {
              "path": "section",
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 2,
                },
                "raw": "section",
                "start": Object {
                  "column": 7,
                  "line": 2,
                },
              },
              "type": "PATH",
            },
            "params": Array [
              Param {
                "key": "key",
                "source": Object {
                  "end": Object {
                    "column": 23,
                    "line": 2,
                  },
                  "raw": "key=\\"abc\\"",
                  "start": Object {
                    "column": 15,
                    "line": 2,
                  },
                },
                "type": "PARAM",
                "value": QuotedDustValue {
                  "source": Object {
                    "end": Object {
                      "column": 23,
                      "line": 2,
                    },
                    "raw": "\\"abc\\"",
                    "start": Object {
                      "column": 19,
                      "line": 2,
                    },
                  },
                  "type": "QUOTED_DUST_VALUE",
                  "valueArray": Array [
                    StringBuffer {
                      "buffer": "abc",
                      "source": Object {
                        "end": Object {
                          "column": 22,
                          "line": 2,
                        },
                        "raw": "abc",
                        "start": Object {
                          "column": 20,
                          "line": 2,
                        },
                      },
                      "type": "STRING_BUFFER",
                    },
                  ],
                },
              },
            ],
            "source": Object {
              "end": Object {
                "column": 14,
                "line": 6,
              },
              "raw": "{#section key=\\"abc\\"}
      abc
      <span>abc</span>
      {reference|a|b}
    {/section}",
              "start": Object {
                "column": 5,
                "line": 2,
              },
            },
            "type": "SECTION",
          },
          StringBuffer {
            "buffer": "
    bcd
    ",
            "source": Object {
              "end": Object {
                "column": 4,
                "line": 8,
              },
              "raw": "
    bcd
    ",
              "start": Object {
                "column": 15,
                "line": 6,
              },
            },
            "type": "STRING_BUFFER",
          },
          HtmlTag {
            "attributes": Array [],
            "body": null,
            "isSelfClosing": true,
            "source": Object {
              "end": Object {
                "column": 8,
                "line": 8,
              },
              "raw": "<br>",
              "start": Object {
                "column": 5,
                "line": 8,
              },
            },
            "tagName": "br",
            "type": "HTML_TAG",
          },
          StringBuffer {
            "buffer": "
    abc
    ",
            "source": Object {
              "end": Object {
                "column": 4,
                "line": 10,
              },
              "raw": "
    abc
    ",
              "start": Object {
                "column": 9,
                "line": 8,
              },
            },
            "type": "STRING_BUFFER",
          },
          HtmlTag {
            "attributes": Array [],
            "body": Root {
              "nodes": Array [
                StringBuffer {
                  "buffer": "
        ",
                  "source": Object {
                    "end": Object {
                      "column": 8,
                      "line": 11,
                    },
                    "raw": "
        ",
                    "start": Object {
                      "column": 10,
                      "line": 10,
                    },
                  },
                  "type": "STRING_BUFFER",
                },
                HtmlTag {
                  "attributes": Array [],
                  "body": Root {
                    "nodes": Array [
                      StringBuffer {
                        "buffer": "
            ",
                        "source": Object {
                          "end": Object {
                            "column": 12,
                            "line": 12,
                          },
                          "raw": "
            ",
                          "start": Object {
                            "column": 18,
                            "line": 11,
                          },
                        },
                        "type": "STRING_BUFFER",
                      },
                      HtmlTag {
                        "attributes": Array [],
                        "body": Root {
                          "nodes": Array [
                            HtmlTag {
                              "attributes": Array [
                                Attribute {
                                  "attributeName": "id",
                                  "attributeValue": "\\"abc\\"",
                                  "isBooleanAttribute": false,
                                  "source": Object {
                                    "end": Object {
                                      "column": 28,
                                      "line": 12,
                                    },
                                    "raw": "id=\\"abc\\"",
                                    "start": Object {
                                      "column": 21,
                                      "line": 12,
                                    },
                                  },
                                  "type": "ATTRIBUTE",
                                },
                              ],
                              "body": Root {
                                "nodes": Array [
                                  StringBuffer {
                                    "buffer": "aaaa",
                                    "source": Object {
                                      "end": Object {
                                        "column": 33,
                                        "line": 12,
                                      },
                                      "raw": "aaaa",
                                      "start": Object {
                                        "column": 30,
                                        "line": 12,
                                      },
                                    },
                                    "type": "STRING_BUFFER",
                                  },
                                ],
                                "source": Object {
                                  "end": Object {
                                    "column": 33,
                                    "line": 12,
                                  },
                                  "raw": "aaaa",
                                  "start": Object {
                                    "column": 30,
                                    "line": 12,
                                  },
                                },
                                "type": "ROOT",
                              },
                              "isSelfClosing": false,
                              "source": Object {
                                "end": Object {
                                  "column": 38,
                                  "line": 12,
                                },
                                "raw": "<li id=\\"abc\\">aaaa</li>",
                                "start": Object {
                                  "column": 17,
                                  "line": 12,
                                },
                              },
                              "tagName": "li",
                              "type": "HTML_TAG",
                            },
                          ],
                          "source": Object {
                            "end": Object {
                              "column": 38,
                              "line": 12,
                            },
                            "raw": "<li id=\\"abc\\">aaaa</li>",
                            "start": Object {
                              "column": 17,
                              "line": 12,
                            },
                          },
                          "type": "ROOT",
                        },
                        "isSelfClosing": false,
                        "source": Object {
                          "end": Object {
                            "column": 43,
                            "line": 12,
                          },
                          "raw": "<ul><li id=\\"abc\\">aaaa</li></ul>",
                          "start": Object {
                            "column": 13,
                            "line": 12,
                          },
                        },
                        "tagName": "ul",
                        "type": "HTML_TAG",
                      },
                      StringBuffer {
                        "buffer": "
        ",
                        "source": Object {
                          "end": Object {
                            "column": 8,
                            "line": 13,
                          },
                          "raw": "
        ",
                          "start": Object {
                            "column": 44,
                            "line": 12,
                          },
                        },
                        "type": "STRING_BUFFER",
                      },
                    ],
                    "source": Object {
                      "end": Object {
                        "column": 8,
                        "line": 13,
                      },
                      "raw": "
            <ul><li id=\\"abc\\">aaaa</li></ul>
        ",
                      "start": Object {
                        "column": 18,
                        "line": 11,
                      },
                    },
                    "type": "ROOT",
                  },
                  "isSelfClosing": false,
                  "source": Object {
                    "end": Object {
                      "column": 18,
                      "line": 13,
                    },
                    "raw": "<section>
            <ul><li id=\\"abc\\">aaaa</li></ul>
        </section>",
                    "start": Object {
                      "column": 9,
                      "line": 11,
                    },
                  },
                  "tagName": "section",
                  "type": "HTML_TAG",
                },
                StringBuffer {
                  "buffer": "
    ",
                  "source": Object {
                    "end": Object {
                      "column": 4,
                      "line": 14,
                    },
                    "raw": "
    ",
                    "start": Object {
                      "column": 19,
                      "line": 13,
                    },
                  },
                  "type": "STRING_BUFFER",
                },
              ],
              "source": Object {
                "end": Object {
                  "column": 4,
                  "line": 14,
                },
                "raw": "
        <section>
            <ul><li id=\\"abc\\">aaaa</li></ul>
        </section>
    ",
                "start": Object {
                  "column": 10,
                  "line": 10,
                },
              },
              "type": "ROOT",
            },
            "isSelfClosing": false,
            "source": Object {
              "end": Object {
                "column": 10,
                "line": 14,
              },
              "raw": "<div>
        <section>
            <ul><li id=\\"abc\\">aaaa</li></ul>
        </section>
    </div>",
              "start": Object {
                "column": 5,
                "line": 10,
              },
            },
            "tagName": "div",
            "type": "HTML_TAG",
          },
          StringBuffer {
            "buffer": "
",
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 15,
              },
              "raw": "
",
              "start": Object {
                "column": 11,
                "line": 14,
              },
            },
            "type": "STRING_BUFFER",
          },
        ],
        "source": Object {
          "end": Object {
            "column": 1,
            "line": 15,
          },
          "raw": "
    {#section key=\\"abc\\"}
      abc
      <span>abc</span>
      {reference|a|b}
    {/section}
    bcd
    <br>
    abc
    <div>
        <section>
            <ul><li id=\\"abc\\">aaaa</li></ul>
        </section>
    </div>
",
          "start": Object {
            "column": 18,
            "line": 1,
          },
        },
        "type": "ROOT",
      },
      "isSelfClosing": false,
      "source": Object {
        "end": Object {
          "column": 6,
          "line": 15,
        },
        "raw": "<div class=\\"abc\\">
    {#section key=\\"abc\\"}
      abc
      <span>abc</span>
      {reference|a|b}
    {/section}
    bcd
    <br>
    abc
    <div>
        <section>
            <ul><li id=\\"abc\\">aaaa</li></ul>
        </section>
    </div>
</div>",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "tagName": "div",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 16,
        },
        "raw": "
",
        "start": Object {
          "column": 7,
          "line": 15,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 16,
    },
    "raw": "<div class=\\"abc\\">
    {#section key=\\"abc\\"}
      abc
      <span>abc</span>
      {reference|a|b}
    {/section}
    bcd
    <br>
    abc
    <div>
        <section>
            <ul><li id=\\"abc\\">aaaa</li></ul>
        </section>
    </div>
</div>
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst not-exists 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [
        Body {
          "context": null,
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  abc
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 3,
                  },
                  "raw": "
  abc
",
                  "start": Object {
                    "column": 12,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "raw": "
  abc
",
              "start": Object {
                "column": 12,
                "line": 1,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 3,
            },
            "raw": "
  abc
",
            "start": Object {
              "column": 12,
              "line": 1,
            },
          },
          "type": "BODY",
        },
      ],
      "context": null,
      "isSelfClosing": false,
      "key": Path {
        "path": "some_key",
        "source": Object {
          "end": Object {
            "column": 10,
            "line": 1,
          },
          "raw": "some_key",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 11,
          "line": 3,
        },
        "raw": "{^some_key}
  abc
{/some_key}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "NOT_EXISTS",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 4,
        },
        "raw": "
",
        "start": Object {
          "column": 12,
          "line": 3,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 4,
    },
    "raw": "{^some_key}
  abc
{/some_key}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst reference 1`] = `
Root {
  "nodes": Array [
    Reference {
      "filters": Array [
        Filter {
          "filter": "filter1",
          "source": Object {
            "end": Object {
              "column": 18,
              "line": 1,
            },
            "raw": "|filter1",
            "start": Object {
              "column": 11,
              "line": 1,
            },
          },
          "type": "FILTER",
        },
        Filter {
          "filter": "filter2",
          "source": Object {
            "end": Object {
              "column": 26,
              "line": 1,
            },
            "raw": "|filter2",
            "start": Object {
              "column": 19,
              "line": 1,
            },
          },
          "type": "FILTER",
        },
        Filter {
          "filter": "filter3",
          "source": Object {
            "end": Object {
              "column": 34,
              "line": 1,
            },
            "raw": "|filter3",
            "start": Object {
              "column": 27,
              "line": 1,
            },
          },
          "type": "FILTER",
        },
      ],
      "path": Path {
        "path": "reference",
        "source": Object {
          "end": Object {
            "column": 10,
            "line": 1,
          },
          "raw": "reference",
          "start": Object {
            "column": 2,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "source": Object {
        "end": Object {
          "column": 35,
          "line": 1,
        },
        "raw": "{reference|filter1|filter2|filter3}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "REFERENCE",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 36,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{reference|filter1|filter2|filter3}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst section 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [
        Body {
          "context": null,
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  abc
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 3,
                  },
                  "raw": "
  abc
",
                  "start": Object {
                    "column": 11,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "raw": "
  abc
",
              "start": Object {
                "column": 11,
                "line": 1,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 3,
            },
            "raw": "
  abc
",
            "start": Object {
              "column": 11,
              "line": 1,
            },
          },
          "type": "BODY",
        },
      ],
      "context": null,
      "isSelfClosing": false,
      "key": Path {
        "path": "section",
        "source": Object {
          "end": Object {
            "column": 9,
            "line": 1,
          },
          "raw": "section",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 10,
          "line": 3,
        },
        "raw": "{#section}
  abc
{/section}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SECTION",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 4,
        },
        "raw": "
",
        "start": Object {
          "column": 11,
          "line": 3,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 4,
    },
    "raw": "{#section}
  abc
{/section}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst section-with-context-bodies 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [
        Body {
          "context": null,
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  first body main
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 3,
                  },
                  "raw": "
  first body main
",
                  "start": Object {
                    "column": 11,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "raw": "
  first body main
",
              "start": Object {
                "column": 11,
                "line": 1,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 3,
            },
            "raw": "
  first body main
",
            "start": Object {
              "column": 11,
              "line": 1,
            },
          },
          "type": "BODY",
        },
        Body {
          "context": Context {
            "identifier": Path {
              "path": "someContext",
              "source": Object {
                "end": Object {
                  "column": 14,
                  "line": 3,
                },
                "raw": "{:someContext}",
                "start": Object {
                  "column": 1,
                  "line": 3,
                },
              },
              "type": "PATH",
            },
            "source": Object {
              "end": Object {
                "column": 14,
                "line": 3,
              },
              "raw": "{:someContext}",
              "start": Object {
                "column": 1,
                "line": 3,
              },
            },
            "type": "CONTEXT",
          },
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  someContextBody
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 5,
                  },
                  "raw": "
  someContextBody
",
                  "start": Object {
                    "column": 15,
                    "line": 3,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 5,
              },
              "raw": "
  someContextBody
",
              "start": Object {
                "column": 15,
                "line": 3,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 5,
            },
            "raw": "{:someContext}
  someContextBody
",
            "start": Object {
              "column": 1,
              "line": 3,
            },
          },
          "type": "BODY",
        },
        Body {
          "context": Context {
            "identifier": Path {
              "path": "else",
              "source": Object {
                "end": Object {
                  "column": 7,
                  "line": 5,
                },
                "raw": "{:else}",
                "start": Object {
                  "column": 1,
                  "line": 5,
                },
              },
              "type": "PATH",
            },
            "source": Object {
              "end": Object {
                "column": 7,
                "line": 5,
              },
              "raw": "{:else}",
              "start": Object {
                "column": 1,
                "line": 5,
              },
            },
            "type": "CONTEXT",
          },
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
  elseBody
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 7,
                  },
                  "raw": "
  elseBody
",
                  "start": Object {
                    "column": 8,
                    "line": 5,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 7,
              },
              "raw": "
  elseBody
",
              "start": Object {
                "column": 8,
                "line": 5,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 7,
            },
            "raw": "{:else}
  elseBody
",
            "start": Object {
              "column": 1,
              "line": 5,
            },
          },
          "type": "BODY",
        },
      ],
      "context": null,
      "isSelfClosing": false,
      "key": Path {
        "path": "section",
        "source": Object {
          "end": Object {
            "column": 9,
            "line": 1,
          },
          "raw": "section",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 10,
          "line": 7,
        },
        "raw": "{#section}
  first body main
{:someContext}
  someContextBody
{:else}
  elseBody
{/section}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SECTION",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 8,
        },
        "raw": "
",
        "start": Object {
          "column": 11,
          "line": 7,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 8,
    },
    "raw": "{#section}
  first body main
{:someContext}
  someContextBody
{:else}
  elseBody
{/section}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst self-closing-block 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [],
      "context": null,
      "isSelfClosing": true,
      "key": Path {
        "path": "selfClosingBlock",
        "source": Object {
          "end": Object {
            "column": 18,
            "line": 1,
          },
          "raw": "selfClosingBlock",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 21,
          "line": 1,
        },
        "raw": "{+selfClosingBlock /}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SELF_CLOSING_BLOCK",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{+selfClosingBlock /}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst self-closing-block-with-body 1`] = `
Root {
  "nodes": Array [
    Section {
      "bodies": Array [
        Body {
          "context": null,
          "root": Root {
            "nodes": Array [
              StringBuffer {
                "buffer": "
    abcdef
",
                "source": Object {
                  "end": Object {
                    "column": 1,
                    "line": 3,
                  },
                  "raw": "
    abcdef
",
                  "start": Object {
                    "column": 20,
                    "line": 1,
                  },
                },
                "type": "STRING_BUFFER",
              },
            ],
            "source": Object {
              "end": Object {
                "column": 1,
                "line": 3,
              },
              "raw": "
    abcdef
",
              "start": Object {
                "column": 20,
                "line": 1,
              },
            },
            "type": "ROOT",
          },
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 3,
            },
            "raw": "
    abcdef
",
            "start": Object {
              "column": 20,
              "line": 1,
            },
          },
          "type": "BODY",
        },
      ],
      "context": null,
      "isSelfClosing": false,
      "key": Path {
        "path": "selfClosingBlock",
        "source": Object {
          "end": Object {
            "column": 18,
            "line": 1,
          },
          "raw": "selfClosingBlock",
          "start": Object {
            "column": 3,
            "line": 1,
          },
        },
        "type": "PATH",
      },
      "params": Array [],
      "source": Object {
        "end": Object {
          "column": 19,
          "line": 3,
        },
        "raw": "{+selfClosingBlock}
    abcdef
{/selfClosingBlock}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SELF_CLOSING_BLOCK",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 4,
        },
        "raw": "
",
        "start": Object {
          "column": 20,
          "line": 3,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 4,
    },
    "raw": "{+selfClosingBlock}
    abcdef
{/selfClosingBlock}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst self-closing-html-tag 1`] = `
Root {
  "nodes": Array [
    HtmlTag {
      "attributes": Array [],
      "body": null,
      "isSelfClosing": true,
      "source": Object {
        "end": Object {
          "column": 4,
          "line": 1,
        },
        "raw": "<br>",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "tagName": "br",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 5,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
    HtmlTag {
      "attributes": Array [],
      "body": null,
      "isSelfClosing": true,
      "source": Object {
        "end": Object {
          "column": 5,
          "line": 2,
        },
        "raw": "<br/>",
        "start": Object {
          "column": 1,
          "line": 2,
        },
      },
      "tagName": "br",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 3,
        },
        "raw": "
",
        "start": Object {
          "column": 6,
          "line": 2,
        },
      },
      "type": "STRING_BUFFER",
    },
    HtmlTag {
      "attributes": Array [
        Attribute {
          "attributeName": "class",
          "attributeValue": "\\"abc\\"",
          "isBooleanAttribute": false,
          "source": Object {
            "end": Object {
              "column": 15,
              "line": 3,
            },
            "raw": "class=\\"abc\\"",
            "start": Object {
              "column": 5,
              "line": 3,
            },
          },
          "type": "ATTRIBUTE",
        },
      ],
      "body": null,
      "isSelfClosing": true,
      "source": Object {
        "end": Object {
          "column": 16,
          "line": 3,
        },
        "raw": "<hr class=\\"abc\\">",
        "start": Object {
          "column": 1,
          "line": 3,
        },
      },
      "tagName": "hr",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 4,
        },
        "raw": "
",
        "start": Object {
          "column": 17,
          "line": 3,
        },
      },
      "type": "STRING_BUFFER",
    },
    HtmlTag {
      "attributes": Array [
        Attribute {
          "attributeName": "class",
          "attributeValue": "\\"abc\\"",
          "isBooleanAttribute": false,
          "source": Object {
            "end": Object {
              "column": 15,
              "line": 4,
            },
            "raw": "class=\\"abc\\"",
            "start": Object {
              "column": 5,
              "line": 4,
            },
          },
          "type": "ATTRIBUTE",
        },
      ],
      "body": null,
      "isSelfClosing": true,
      "source": Object {
        "end": Object {
          "column": 17,
          "line": 4,
        },
        "raw": "<hr class=\\"abc\\"/>",
        "start": Object {
          "column": 1,
          "line": 4,
        },
      },
      "tagName": "hr",
      "type": "HTML_TAG",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 5,
        },
        "raw": "
",
        "start": Object {
          "column": 18,
          "line": 4,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 5,
    },
    "raw": "<br>
<br/>
<hr class=\\"abc\\">
<hr class=\\"abc\\"/>
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;

exports[`toAst special 1`] = `
Root {
  "nodes": Array [
    Special {
      "key": "lb",
      "source": Object {
        "end": Object {
          "column": 5,
          "line": 1,
        },
        "raw": "{~lb}",
        "start": Object {
          "column": 1,
          "line": 1,
        },
      },
      "type": "SPECIAL",
    },
    StringBuffer {
      "buffer": "
",
      "source": Object {
        "end": Object {
          "column": 1,
          "line": 2,
        },
        "raw": "
",
        "start": Object {
          "column": 6,
          "line": 1,
        },
      },
      "type": "STRING_BUFFER",
    },
  ],
  "source": Object {
    "end": Object {
      "column": 1,
      "line": 2,
    },
    "raw": "{~lb}
",
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "ROOT",
}
`;
